--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ jobs:
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - docker build -t openvpn .
       - docker images
-      - docker tag openvpn $DOCKER_USERNAME/openvpn
-      - docker push $DOCKER_USERNAME/openvpn
+      - docker tag openvpn amneziavpn/openvpn
+      - docker push amneziavpn/openvpn
